--- a/Karar Destek Sistemleri/styles.css
+++ b/Karar Destek Sistemleri/styles.css
@@ -29,3 +29,17 @@
   margin-left: 40px;
   margin-top: 10px;
 }
+.ilk-span {
+  font-size: 20px;
+  color: white;
+}
+@media only screen and (max-width: 1500px) {
+  .ilk-span {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 1400px) {
+  .ilk-span {
+    font-size: 16px;
+  }
+}
